Fix wiki sidebar being too high

--- a/_sass/wiki.sass
+++ b/_sass/wiki.sass
@@ -1,3 +1,6 @@
+.wiki_sidebar
+    margin-top: 20px
+
 .wiki_sidebar ul, .wiki_sidebar li
     list-style: none inside none
     padding: 0
